[gd_scene load_steps=6 format=3 uid="uid://lo576ngbl7vq"]

[ext_resource type="Script" uid="uid://d4ade4u7lg8y8" path="res://scenes/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bhgvqvlh4d0r6" path="res://mainbg.jpg" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://bjn056sk58p66" path="res://assets/Character_animation/sundalong bert/GrapeSoda.ttf" id="3_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 0.84705883)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="Theme" id="Theme_ekxnf"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_ekxnf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bqqt6")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(15.30028, 15.30028, 15.30028, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -144.375
offset_right = 260.0
offset_bottom = 144.375
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -216.0
offset_top = -281.0
offset_right = 218.0
offset_bottom = -170.0
theme = SubResource("Theme_ekxnf")
theme_override_colors/font_color = Color(0.11373194, 1.0184411, 0.031273946, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 70
text = "CODE QUEST"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_exit_pressed"]
